# online-quest-backend

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: workflow.yml
alembic/: env.py
alembic/versions/: 30e659b9657e_add_user_table.py  3526b3009969_add_tz_to_ans.py  3adad33e0907_create_answer_text.py  7ab4d3e64ed3_remove_unused.py  90c9b59097f5_add_unique_to_vk_user_id.py  ab99bff75efe_add_avaliable_task.py  be31dedaa664_first_migration.py  e044e0b3fe89_add_task_table_and_user_task_table.py  f8a6a6d9865f_add_answer_text.py
app/config/: __init__.py  config.py
app/core/: server.py  utils.py
app/database/: base.py  connection.py
app/database/models/: __init__.py  answer.py  task.py  user.py  user_task.py
app/internal/: deps.py
app/internal/handlers/: __init__.py  handler_sqlalchemy.py
app/internal/repository/: __init__.py  answer.py  base.py  task.py  user.py
app/internal/schemes/: __init__.py  answer.py  answer_status.py  campus_model.py  success.py  task.py  user.py
app/internal/service/: __init__.py  answer.py  base.py  task.py  telegram_logger.py  user.py
app/pkg/: utils.py
app/pkg/database/: connection.py
app/tasks/: _01_regexp.py  _01_source.txt  _02_coordinates.py  _03_xor_decode.py  _04_osint.py  _05_images_xor_decode.py  _06_stegano.py  _07_post_request.py  _08_square_chiper.py  _08_todo.py  _09_socket.py  _10_public_key.py  _10_todo.py  __init__.py  images_xor_decode.py  task_1.py  xor_decode.py
app/tasks/static/: _10_private_16b5541b2f683ec4.key  (+1 more)
nginx/: nginx.conf
(+13 files in other folders)
